Ejercicio objetos dinamicos

--- a/calculardiasemana.html
+++ b/calculardiasemana.html
@@ -48,7 +48,7 @@
             console.log(res7);
 
           
-            $("#solucion").text(array[res7]);
+            $("#solucion").text("El dia de la semana de la fecha "+dia+"/"+mes+"/"+año+" es "+array[res7]);
             });
   
         });
