--- a/EjercicioChampions/TablaApuestas.html
+++ b/EjercicioChampions/TablaApuestas.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <h1>Tabla Apuestas</h1>
-        <a href="NuevaApuesta.html"
+        <a href="InsertarApuesta.html"
                 className="btn btn-info">
                     Insertar Apuesta
           </a>
