no entiendo nada XD

--- a/EjercicioChampions/InsertarApuesta.html
+++ b/EjercicioChampions/InsertarApuesta.html
@@ -55,7 +55,8 @@
 
         <a class="btn btn-success" href="TablaApuestas.html">Volver</a>
         <script> //SCRIPT INSERTAR APUESTA
-        var ulrapi = "https://apichampions.azurewebsites.net"
+        var urlapi = "https://apichampions.azurewebsites.net"
+        
             $("#insertar").click(function(){
                 var request = "/api/Apuestas";
                 console.log("dentro de insertar hosp");
